    setting.
  * `:config-dict-remove` and `:config-list-remove` to remove an element from a
    dict/list setting.
- New `hints.selectors` setting which allows to configure what CSS selectors
  are used for hints, and also allows adding custom hint groups.
- New `:yank markdown` feature which yanks the current URL and title in
  markdown format.

Changed
~~~~~~~

- `:q` now closes current window instead of quitting qutebrowser completely
  (`:close`), while `:qa` quits (`:quit`). The behavior of `:wq` remains
  unchanged (`:quit --save`), as closing a window while saving the session
  doesn't make sense.
- Completion highlighting is now done differently (using `QSyntaxHighlighter`),
  which should fix some highlighting corner-cases.
- The `QtColor` config type now also understands colors like `rgb(...)`.
- `:yank` now has a `--quiet` option which causes it to not display a message.
- The `:open` completion now also shows search engines by default.
- The `content.host_blocking.enabled` setting now supports URL patterns, so the
  adblocker can be disabled on a given page.
- Elements with a `tabindex` attribute now also get hints by default.
- Various small performance improvements for hints and the completion.
- The Wayland check for QtWebEngine is now disabled on Qt >= 5.11.2, as those
  versions should work without any issues.
- The JavaScript `console` object is now available in PAC files.
- The metainfo file `qutebrowser.appdata.xml` is now renamed to
  `org.qutebrowser.qutebrowser.appdata.xml`.
- The `qute-pass` userscript now understands domains in gpg filenames
  in addition to directory names.

Fixed
~~~~~

- Invalid world IDs now get rejected for `:jseval` and GreaseMonkey scripts.
- When websites suggest download filenames with invalid characters, those are
  now correctly replaced.
- Invalid hint length calculation in certain rare cases.
- Dragging tabs in the tab bar (which was broken in v1.5.0)
- Using Shift-Home in command mode now works properly.